make the table on print delet the icon on print and make the gap 0 px  i make noprintdplay and noprintv and fix bugs and css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,8 +7,11 @@
 }
 
 @media print {
-  .noprint {
+  .noprintdplay {
     display :none;
+  }
+  .noprintv {
+   visibility: hidden;
   }
   
   .onprint {
@@ -90,6 +93,7 @@ body {
   -moz-box-shadow: 10px 10px 13px -7px rgba(0,0,0,0.54);
 }
 
+
 #tableTitle span {
   background-color: rgb(49, 47, 47) ;
 }
@@ -97,8 +101,9 @@ body {
 .row-grid{
   display: grid;
   grid-template-columns: 60px 100px repeat(3, 200px) 100px ;
+  /* on edit dont forget to edit the print media  */
   grid-auto-rows: minmax(60px, auto);
-  gap: 16px;
+  /* gap: 3px; */
   justify-items: center;
   background-color: rgba(255, 255, 255, 0.8);
   border-bottom: solid 1px rgba(0, 0, 0, 0.2);
@@ -107,12 +112,22 @@ body {
 
 .row-grid-day{
   display: grid;
-  grid-template-columns: 60px auto;
+  grid-template-columns: 60px 1fr;
   grid-auto-rows: minmax(60px, auto);
   justify-items: center;
   background-color: rgba(255, 255, 255, 0.8);
   border-bottom: solid 1px rgba(0, 0, 0, 0.2);
   margin: auto ;
+}
+
+@media print {
+  .row-grid {
+    grid-template-columns: 100px repeat(3, 200px) 100px ;
+  }
+  .row-grid-day{
+    grid-template-columns:1fr ;
+  }
+
 }
 
 .row-grid-note{
